# Earthquake_ETL_Data

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose-airflow.yml  docker-compose.yml  init-multiple-dbs.sh  load_csv.py  main.py  pyproject.toml  requirements-airflow.txt
alembic/: env.py
alembic/versions/: 2f5bc7613c97_adds_date_handling.py  3335f792e59e_creates_stage_earthquakes_table.py  52a3dc27eb5b_create_earthquakes_table.py
app/: models.py
app/data/: utils.py
app/etl/: load_data.py  process_earthquake_data.py  transform_data.py
dags/: earthquake_etl_dag.py  file_test_dag.py
data/visualizations/: dashboard.html  debug_dashboard.html  debug_log.txt  earthquake_map.html  error.html  test_from_dag.html  test_map.html
docker/: Dockerfile  Dockerfile.airflow  entrypoint.sh
